wip client carousel jumping issue

--- a/css/index.css
+++ b/css/index.css
@@ -1418,7 +1418,7 @@ nav {
 }
 
 .clients-carousel-image-2 {
-  background-size: 13rem;
+  background-size: 11rem;
   background-image: url("../images/clients-carousel/02_xupes_logo.png");
 }
 
@@ -1429,7 +1429,6 @@ nav {
 
 .clients-carousel-image-4 {
   background-size: 14rem;
-  padding: 0 2rem;
   background-image: url("../images/clients-carousel/04_survey_solutions_logo.png");
 }
 
@@ -1439,20 +1438,17 @@ nav {
 }
 
 .clients-carousel-image-6 {
-  background-size: 13rem;
-  padding: 0 2rem;
+  background-size: 11rem;
   background-image: url("../images/clients-carousel/06_sweetzy_logo.png");
 }
 
 .clients-carousel-image-7 {
-  background-size: 12rem;
-  padding: 0 2rem;
+  background-size: 10rem;
   background-image: url("../images/clients-carousel/07_howespercivallogo.png");
 }
 
 .clients-carousel-image-8 {
-  background-size: 12rem;
-  padding: 0 2rem;
+  background-size: 10rem;
   background-image: url("../images/clients-carousel/08_girls_day_school_trust_logob.png");
 }
 
