--- a/scss/layout/_clients-carousel.scss
+++ b/scss/layout/_clients-carousel.scss
@@ -20,7 +20,7 @@
 
 .clients-carousel-image-2 {
     @extend %sml-client-carousel-image;
-    background-size: 13rem;
+    background-size: 11rem;
     background-image: url("../images/clients-carousel/02_xupes_logo.png"); 
 }
 
@@ -33,7 +33,7 @@
 .clients-carousel-image-4 {
     @extend %sml-client-carousel-image;
     background-size: 14rem;
-    padding: 0 2rem;
+  
     background-image: url("../images/clients-carousel/04_survey_solutions_logo.png"); 
 }
 
@@ -45,22 +45,19 @@
 
 .clients-carousel-image-6 {
     @extend %sml-client-carousel-image;
-    background-size: 13rem;
-    padding: 0 2rem;
+    background-size: 11rem;   
     background-image: url("../images/clients-carousel/06_sweetzy_logo.png"); 
 }
 
 .clients-carousel-image-7 {
     @extend %sml-client-carousel-image;
-    background-size: 12rem;
-    padding: 0 2rem;
+    background-size: 10rem;  
     background-image: url("../images/clients-carousel/07_howespercivallogo.png"); 
 }
 
 .clients-carousel-image-8 {
     @extend %sml-client-carousel-image;  
-    background-size: 12rem;  
-    padding: 0 2rem;
+    background-size: 10rem;  
     background-image: url("../images/clients-carousel/08_girls_day_school_trust_logob.png"); 
 }
 
